<resources>
   <string name="exit_message">Swipe or Tap again to exit</string>
   <string name="app_name">TimeLY</string>
   <string name="action_settings">Settings</string>
   <string name="school">School</string>
   <string name="assignment">Assignments</string>
   <string name="miscellaneous">Misc</string>
   <string name="settings">Settings</string>
   <string name="help">Report Issues</string>
   <string name="whats_new">What\'s new</string>
   <string name="timetable">Timetable</string>
   <string name="classes">Scheduled Classes</string>
   <string name="about">About</string>
   <string name="open">Show event list</string>
   <string name="close">Hide event list</string>
   <string name="choose_course">COURSE CODE</string>
   <string name="lecturer">Lecturer</string>
   <string name="title">Title</string>
   <string name="description">Description</string>
   <string name="submission_date">Submission date</string>
   <string name="todo">TODO</string>
   <string name="edit">EDIT</string>
   <string name="heading">The title: This is a very, very long text just to describe the content</string>
   <string name="describe">This is a very, very long text just to describe the content</string>
   <string name="default_date">Thursday, 02 March, 2021</string>
   <string name="default_lecturer_name">Mr Noah</string>
   <string name="default_course">CSC201</string>
   <string name="no_task">no task</string>
   <string name="Wednesday">Wednesday</string>
   <string name="add">add</string>
   <string name="long_description">The description of the file</string>
   <string name="default_time">08:00</string>
   <string name="default_time_2">08:00 – 09:00</string>
   <string name="default_time_3">08:00 AM – 09:00 PM</string>
   <string name="default_time_5">May 6, 08:00 AM – Oct 7, 09:00 PM</string>
   <string name="default_course_name">Android first generation programming II</string>
   <string name="lecturer_hint">Lecturer Name</string>
   <string name="start_time_hint">Start Time</string>
   <string name="start_time_hint_optional">Start Time (optional)</string>
   <string name="end_time_hint">End Time</string>
   <string name="end_time_hint_optional">End Time (optional)</string>
   <string name="no_timetable">No Timetable yet</string>
   <string name="alarms">Study Alarms</string>
   <string name="not_important">NOT IMPORTANT</string>
   <string name="less_important">LESS IMPORTANT</string>
   <string name="very_important">VERY IMPORTANT</string>
   <string name="no_alarms">No Alarms yet</string>
   <string name="discover">Discover events</string>
   <string name="repeat">Repeat</string>
   <string name="choose_ringtone">Choose ringtone</string>
   <string name="vibrate">Vibrate</string>
   <string name="day_and_night">day and night</string>
   <string name="set_time">set time</string>
   <string name="label">Label</string>
   <string name="alarm_label">Alarm\'s Label</string>
   <string name="time_format_summary">Turning this OFF will ensure that alarms use the 12-hours format</string>
   <string name="dismiss_summary">When alarm heads-up notification is clicked,and then alarm is viewed, you have the option of dismissing the alarm or snoozing it</string>
   <string name="snoozed">(SNOOZED)</string>
   <string name="sad_emoji">sad emoji</string>
   <string name="clear">dismiss</string>
   <string name="suggestions">Suggestions</string>
   <string name="suggestion_1">Consider editing former alarm</string>
   <string name="suggestion_2">Delete former alarm</string>
   <string name="assignment_status">Assignment Status</string>
   <string name="delete">delete</string>
   <string name="registered_course">Registered Courses</string>
   <string name="no_course">No courses yet</string>
   <string name="default_credit">3 credits</string>
   <string name="register">Register</string>
   <string name="name_hint">Course Name</string>
   <string name="add_course_dialog_title">Register Course</string>
   <string name="multiple">Multiple</string>
   <string name="code_hint">Course Code</string>
   <string name="credits">CREDITS:</string>
   <string name="first_semester">FIRST SEMESTER</string>
   <string name="second_semester">SECOND SEMESTER</string>
   <string name="long_text">An ancient form of futility is the death. All children like cut white breads in ice water and cumin.How addled. You hail like a biscuit eater.</string>
   <string name="add_timetable_dialog_title">Register Timetable</string>
   <string name="exam_timetable">Exam Timetable</string>
   <string name="no_assignments_yet">No Assignments yet</string>
   <string name="no_exams">No Exams yet</string>
   <string name="change_notification">Changes will take effect on restart</string>
   <string name="add_exam_dialog_title">Register exams</string>
   <string name="clear_data">Clear Entries</string>
   <string name="default_day">Tuesday</string>
   <string name="registration_pending">Registering</string>
   <string name="update_pending">Updating</string>
   <string name="from">FROM</string>
   <string name="skip">skip button</string>
   <string name="view">VIEW IMAGES</string>
   <string name="check_stat">image checked status</string>
   <string name="no_media">No Images Attached</string>
   <string name="image">Image</string>
   <string name="add_course">add course</string>
   <string name="generate_export">Export</string>
   <string name="generate_import">Import</string>
   <string name="check_update">Check for updates</string>
   <string name="morning">Good Morning</string>
   <string name="afternoon">Good Afternoon</string>
   <string name="evening">Good Evening</string>
   <string name="fullscreen_image">Fullscreen Image</string>
   <string name="no_image">No Image Found</string>
   <string name="internal_storage">internal storage</string>
   <string name="internal">Internal Storage</string>
   <string name="external">External Storage</string>
   <string name="start">I\'m ready!</string>
   <string name="good_morning">Good Morning</string>
   <string name="manage_time">Manage your time</string>
   <string name="track_progress">Increase your productivity</string>
   <string name="manage_assignments">Manage class assignments</string>
   <string name="manage_exams">Be prepared for exams</string>
   <string name="introduction">Introduction</string>
   <string name="noticeTitle">Notice</string>
   <string name="noticeMessage">Some features require that battery optimization constraint be removed, Continue?</string>
   <string name="go">GO</string>
   <string name="report_message">You will be re-directed to Whatsapp to report this bug, Continue?</string>
   <string name="report_title">Report Bug</string>
   <string name="yes">Yes</string>
   <string name="version">v1.0.0</string>
   <string name="dialog_pref">Use dialogs to add new task and reminders. This won\'t work for smaller screen sizes</string>
   <string name="ei_dialog_pref">Use dialogs to show data to be exported/imported. This won\'t work for smaller screen sizes</string>
   <string name="add_timetable">Add timetable</string>
   <string name="add_exam">add exams</string>
   <string name="night">Good Night</string>
   <string name="sleep">Sleep Well</string>
   <string name="rise">Rise and Shine</string>
   <string name="rocket">Rocket</string>
   <string name="new_badge">New Badge</string>
   <string name="initial_version_not">This is just the first version</string>
   <string name="timely_icon">timely icon</string>
   <string name="app_description">An android app that manages and keeps track of University students activities</string>
   <string name="header">Developer\'s Contact</string>
   <string name="fb">facebook icon</string>
   <string name="gmail">Gmail icon</string>
   <string name="github">Github icon</string>
   <string name="dev_name">Ebenmelu Ifenna Emmanuel (Noah)</string>
   <string name="dev_gmail">www.iebenmelu@gmail.com</string>
   <string name="dev_github_username">noahweasley</string>
   <string name="default_date_2">22–03–2020</string>
   <string name="default_dir_nae">Downloads</string>
   <string name="rand">23</string>
   <string name="am">AM</string>
   <string name="pm">PM</string>
   <string name="default_date_format">dd-mm-yyy</string>
   <string name="app_name_multi_colored">Time<font color="#FF2424">LY</font></string>
   <string name="never">NEVER</string>
   <string name="later">LATER</string>
   <string name="fix_message_1">Fixed report action bug on Android 11 devices</string>
   <string name="fix_message_2">Fixed no-scroll behaviour in Info dialog</string>
   <string name="todo_list">Todo list</string>
   <string name="no_tasks_yet">No Tasks yet</string>
   <string name="all">All</string>
   <string name="default_task_number">0 task(s)</string>
   <string name="work">Work</string>
   <string name="music">Music</string>
   <string name="travel">Travel</string>
   <string name="study">Study</string>
   <string name="creativity">Creativity</string>
   <string name="shopping">Shopping</string>
   <string name="leisure_fun"><![CDATA[Leisure & Fun]]></string>
   <string name="todo_default_title">Play the piano</string>
   <string name="todo_default_description">Web application design for $500</string>
   <string name="no_todos">No Todos yet</string>
   <string name="category_load">Loading categories</string>
   <string name="update_text">UPDATE</string>
   <string name="register_text">REGISTER</string>
   <string name="default_time_4">Thur, 08:00 AM – 09–00 PM</string>
   <string name="plan">What are you planning?</string>
   <string name="task_completion_time">Task completion</string>
   <string name="default_start_time">08:00 AM</string>
   <string name="default_start_time_24">08:00</string>
   <string name="default_end_time">12:00 AM</string>
   <string name="default_end_time_24">12:00</string>
   <string name="to">TO</string>
   <string name="add_task">ADD TASK</string>
   <string name="add_timeframe">ADD TIMEFRAME</string>
   <string name="noticeMessage_2">To add assignment images, TimeLY needs to access media files on your device; Click <b>GO</b> to grant access</string>
   <string name="default_category">Work</string>
   <string name="deny">Deny</string>
   <string name="optional_info">More info on task (Optional)</string>
   <string name="update_task_all_caps">UPDATE TASK</string>
   <string name="lorem_short">Clear stars, to the galaxy.</string>
   <string name="lorem_long">Animaliss sunt buxums de fatalis decor.Cum vita congregabo, omnes advenaes talem pius,flavumollaes.Ubi est neuter deus? lorem</string>
   <string name="lorem_longer">Broccoli combines greatly with yellow chicken breasts.Rhubarb tastes best with cream andlots of vegemite.Everyone loves the consistency of lentils smoothie jumbled with hot chipotle chile powder.</string>
   <string name="lorem_longest">Courage, strength, and death.The reef robs with power, taste the seychelles untilithobbles.Golly gosh, golden treasure! How big. You scrape like a gibbet.Jolly, rainy tobacco. you won\'t lead the freighter.The skiff waves punishment like a black furner. Lagoons scream on endurance at jamaica!</string>
   <string name="empty_time_range">Time range not set</string>
   <string name="task_viewer_header">Task viewer</string>
   <string name="miscellaneous_channel_desc">Other kinds of notifications</string>
   <string name="select_all">Select all</string>
   <string name="buy_me_a_coffee">Buy me a coffee</string>
   <string name="choose_data">Choose data to export</string>
   <string name="export_success_message">Data exported successfully</string>
   <string name="import_success_message">Data imported Successfully</string>
   <string name="share">share</string>
   <string name="g_p_a_calculator">G.P.A Calculator</string>
   <string name="notification">Notification</string>
   <string name="chats">Messaging</string>
   <string name="home">Home</string>
   <string name="Upload_title">Library</string>
   <string name="marketplace">Marketplace</string>
</resources>