<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

   <item
      android:id="@+id/home"
      android:icon="@drawable/ic_baseline_home_24"
      android:title="@string/home" />

   <item
      android:id="@+id/chats"
      android:icon="@drawable/ic_chat_bubble"
      android:title="@string/chats" />

   <item
      android:id="@+id/library"
      android:icon="@drawable/ic_baseline_library_books_24"
      android:title="@string/Upload_title" />

   <item
      android:id="@+id/marketplace"
      android:icon="@drawable/ic_baseline_shopping_cart_24"
      android:title="@string/marketplace" />

   <item
      android:id="@+id/notification"
      android:icon="@drawable/ic_notification"
      android:title="@string/notification" />

</menu>