<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:external="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="360dp"
   android:layout_height="500dp"
   android:background="@color/window_background_color"
   tools:layout_gravity="center">

   <ImageButton
      android:id="@+id/cancel"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:background="@null"
      android:contentDescription="@string/delete"
      android:paddingTop="8dp"
      android:paddingEnd="8dp"
      android:paddingRight="8dp"
      external:layout_constraintEnd_toEndOf="parent"
      external:layout_constraintTop_toTopOf="parent"
      external:srcCompat="@drawable/ic_clear"
      tools:ignore="RtlSymmetry" />

   <TextView
      android:id="@+id/dialog_title"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginTop="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginRight="8dp"
      android:fontFamily="sans-serif"
      android:gravity="center_horizontal"
      android:text="@string/add_course_dialog_title"
      android:textColor="@android:color/black"
      android:textSize="20sp"
      android:textStyle="bold"
      external:layout_constraintEnd_toEndOf="parent"
      external:layout_constraintStart_toStartOf="parent"
      external:layout_constraintTop_toBottomOf="@+id/cancel" />

   <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/course_name_parent"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/layout_gap"
      android:layout_marginVertical="@dimen/layout_gap"
      android:background="@drawable/bg_form"
      external:errorEnabled="true"
      external:layout_constraintEnd_toEndOf="parent"
      external:layout_constraintStart_toStartOf="parent"
      external:layout_constraintTop_toBottomOf="@+id/dialog_title">

      <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/course_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/transparent"
         android:drawablePadding="8dp"
         android:paddingTop="8dp"
         android:hint="@string/name_hint"
         android:maxLines="2"
         android:minLines="2"
         android:textSize="@dimen/editext_text_size"
         external:layout_constraintBottom_toTopOf="@id/course_code"
         external:layout_constraintEnd_toEndOf="parent"
         external:layout_constraintStart_toStartOf="parent"
         external:layout_constraintTop_toTopOf="parent"
         tools:ignore="Autofill,TextFields" />

   </com.google.android.material.textfield.TextInputLayout>

   <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/course_code_parent"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@drawable/bg_form"
      external:errorEnabled="true"
      android:layout_marginTop="@dimen/layout_gap"
      external:layout_constraintBottom_toTopOf="@id/divider"
      external:layout_constraintEnd_toEndOf="@+id/course_name_parent"
      external:layout_constraintStart_toStartOf="@id/course_name_parent"
      external:layout_constraintTop_toBottomOf="@id/course_name_parent">

      <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/course_code"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/layout_gap"
         android:paddingTop="8dp"
         android:background="@android:color/transparent"
         android:hint="@string/code_hint"
         android:maxLength="20"
         android:maxLines="1"
         android:textSize="@dimen/editext_text_size"
         tools:ignore="Autofill,TextFields" />

   </com.google.android.material.textfield.TextInputLayout>

   <View
      android:id="@+id/divider"
      android:layout_width="0dp"
      android:layout_height="1dp"
      android:layout_marginVertical="@dimen/layout_gap"
      android:background="?android:attr/listDivider"
      external:layout_constraintEnd_toEndOf="parent"
      external:layout_constraintStart_toStartOf="parent"
      external:layout_constraintTop_toBottomOf="@+id/course_code_parent" />

   <RadioGroup
      android:id="@+id/semester_group"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/layout_gap"
      external:layout_constraintEnd_toEndOf="@+id/course_code_parent"
      external:layout_constraintTop_toBottomOf="@+id/divider">

      <RadioButton
         android:id="@+id/first"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked="true"
         android:text="@string/first_semester" />

      <RadioButton
         android:id="@+id/second"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/second_semester" />

   </RadioGroup>

   <TextView
      android:id="@+id/text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/credits"
      android:textStyle="bold"
      external:layout_constraintBottom_toBottomOf="@id/credits"
      external:layout_constraintStart_toStartOf="@+id/course_code_parent"
      external:layout_constraintTop_toTopOf="@id/credits" />

   <Spinner
      android:id="@+id/credits"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginLeft="8dp"
      android:layout_marginBottom="8dp"
      external:layout_constraintBottom_toTopOf="@+id/multiple"
      external:layout_constraintStart_toEndOf="@+id/text"
      external:layout_constraintTop_toBottomOf="@+id/semester_group" />

   <CheckBox
      android:id="@+id/multiple"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:checked="true"
      android:text="@string/multiple"
      external:layout_constraintBottom_toTopOf="@id/register"
      external:layout_constraintEnd_toEndOf="@id/course_name_parent" />

   <CheckBox
      android:id="@+id/clear"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="8dp"
      android:text="@string/clear_data"
      external:layout_constraintBottom_toTopOf="@id/register"
      external:layout_constraintStart_toStartOf="@+id/course_code_parent" />

   <Button
      android:id="@+id/register"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@drawable/register_button"
      android:text="@string/register"
      android:textColor="@android:color/white"
      external:layout_constraintBottom_toBottomOf="parent"
      external:layout_constraintEnd_toEndOf="parent"
      external:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>